# WordCounter-REST

./: .gitignore  CMakeLists.txt  README.md  TestWordCounter.cpp  TestWordCounterClient.cpp  WordCounter.h  WordCounterClient.h  WordCounterServer.cpp  WordCounterServer.h
WordCounter/: CMakeLists.txt
WordCounter/include/: WordCounter.h
WordCounter/test/: TestWordCounter.cpp
WordCounterClient/: CMakeLists.txt
WordCounterClient/include/: WordCounterClient.h
WordCounterClient/src/: WordCounterClient.cpp
WordCounterServer/: CMakeLists.txt
WordCounterServer/include/: WordCounterServer.h
WordCounterServer/test/: TestWordCounterServer.cpp
reference/: CMakeLists.txt  bottle.cpp  hello.cpp  parser.cpp
